--- a/backend/package.json
+++ b/backend/package.json
@@ -17,41 +17,50 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "keywords": ["gigpay", "fintech", "gig-economy", "payouts", "india"],
+  "keywords": [
+    "gigpay",
+    "fintech",
+    "gig-economy",
+    "payouts",
+    "india"
+  ],
   "author": "GigPay Team",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.21.0",
     "@prisma/client": "^5.20.0",
-    "socket.io": "^4.8.0",
-    "bull": "^4.16.0",
-    "ioredis": "^5.4.0",
-    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.5",
-    "tesseract.js": "^5.1.1",
-    "node-cron": "^3.0.3",
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
-    "morgan": "^1.10.0",
     "helmet": "^7.1.0",
-    "cors": "^2.8.5",
-    "compression": "^1.7.4",
-    "winston": "^3.14.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.0",
     "uuid": "^9.0.1",
-    "razorpay": "^2.9.4",
-    "@aws-sdk/client-s3": "^3.665.0",
+    "winston": "^3.14.2"
+  },
+  "optionalDependencies": {
     "@aws-sdk/client-rekognition": "^3.665.0",
+    "@aws-sdk/client-s3": "^3.665.0",
+    "@aws-sdk/s3-request-presigner": "^3.995.0",
+    "bull": "^4.16.0",
     "firebase-admin": "^12.6.0",
+    "ioredis": "^5.4.0",
+    "razorpay": "^2.9.4",
+    "tesseract.js": "^5.1.1",
     "twilio": "^5.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "prisma": "^5.20.0"
   },
   "engines": {
