--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -6,10 +6,13 @@
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#0d9488",
-  "background_color": "#0f172a",
+  "theme_color": "#0D1B3E",
+  "background_color": "#0D1B3E",
   "lang": "en",
-  "categories": ["finance", "business"],
+  "categories": [
+    "finance",
+    "business"
+  ],
   "icons": [
     {
       "src": "/icon-192.png",
