--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,35 +1,13 @@
 # ============================================================
-# GigPay ML Service — Python Dependencies
+# GigPay ML Service — Python Dependencies (Slimmed for Hackathon)
 # ============================================================
 
 # Web framework
 fastapi==0.115.0
 uvicorn[standard]==0.31.0
 
-# ML / Deep Learning
-tensorflow==2.15.1
-scikit-learn==1.5.2
-pandas==2.2.3
-numpy==1.26.4
-joblib==1.4.2
-
-# NLP (SMS classifier)
-transformers==4.45.2
-torch==2.4.1
-
 # Data validation
 pydantic==2.9.2
 
-# Database & Cache
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.35
-redis==5.1.1
-
-# HTTP client
-httpx==0.27.2
-
 # Environment
 python-dotenv==1.0.1
-
-# Utilities
-aiohttp==3.10.10
