WA bot done, testing left, roadmap updated

--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,9 @@ NBFC_PARTNER_API_URL=https://api.nbfcpartner.com
 NBFC_PARTNER_API_KEY=your_nbfc_key
 GROWW_API_KEY=your_groww_key
 
+# WhatsApp Bot - Internal auth secret (must match whatsapp-bot/.env GIGPAY_BOT_SECRET)
+GIGPAY_BOT_SECRET=internal_service_secret_for_auth_between_bot_and_backend
+
 # Logging
 LOG_LEVEL=debug
 
