--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.0",
     "uuid": "^9.0.1",
