--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -41,11 +42,15 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-forge": "^1.3.3",
+    "node-stream-zip": "^1.15.0",
     "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.0",
+    "unzipper": "^0.12.3",
     "uuid": "^9.0.1",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "xml2js": "^0.6.2"
   },
   "optionalDependencies": {
     "@aws-sdk/client-rekognition": "^3.665.0",
