--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,38 +11,39 @@
     "lint": "eslint . --ext js,jsx"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "zustand": "^4.5.5",
-    "@tanstack/react-query": "^5.59.0",
-    "axios": "^1.7.7",
-    "socket.io-client": "^4.8.0",
-    "@vis.gl/react-google-maps": "^1.3.0",
-    "recharts": "^2.13.0",
-    "react-hook-form": "^7.53.0",
-    "zod": "^3.23.8",
     "@hookform/resolvers": "^3.9.0",
-    "firebase": "^10.14.0",
+    "@tanstack/react-query": "^5.59.0",
+    "@vis.gl/react-google-maps": "^1.3.0",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "react-hot-toast": "^2.4.1",
+    "firebase": "^10.14.0",
     "framer-motion": "^11.11.0",
     "i18next": "^23.16.0",
-    "react-i18next": "^15.1.0",
     "lucide-react": "^0.451.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.1.0",
+    "react-router-dom": "^6.27.0",
+    "react-webcam": "^7.2.0",
+    "recharts": "^2.13.0",
+    "socket.io-client": "^4.8.0",
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
-    "vite": "^5.4.9",
-    "vite-plugin-pwa": "^0.20.5",
-    "tailwindcss": "^3.4.13",
-    "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.37.0",
-    "eslint-plugin-react-hooks": "^5.0.0"
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.9",
+    "vite-plugin-pwa": "^0.20.5"
   },
   "engines": {
     "node": ">=20.0.0"
