--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -27,3 +27,6 @@ openai>=1.0.0
 # Database (direct SQL queries for insights)
 sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
+
+# Task Scheduling
+apscheduler>=3.10.0
