--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.0",
+    "stripe": "^20.4.0",
     "unzipper": "^0.12.3",
     "uuid": "^9.0.1",
     "winston": "^3.14.2",
