--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.8.0",
     "@tanstack/react-query": "^5.59.0",
     "@vis.gl/react-google-maps": "^1.3.0",
     "axios": "^1.7.7",
